--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -2,77 +2,14 @@
 
 @import "mobileMenu";
 
-// Burger menu button
-$burger--thickness: 4px;
-.burger {
-  $width: 28px;
-
-  display: inline-block;
-  border: 0;
-  background: none;
-  outline: 0;
-  padding: 0;
-  cursor: pointer;
-
-  border-bottom: $burger--thickness solid currentColor;
-  width: $width;
-
-  transition: border-bottom 1s ease-in-out;
-  -webkit-transition: border-bottom 1s ease-in-out;
-
-  // Fix for extra space in Firefox
-  &::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-  }
-
-  &:before {
-    content: "";
-    display: block;
-    border-bottom: $burger--thickness solid currentColor;
-    width: 100%;
-    margin-bottom: 5px;
-    transition: transform 0.5s ease-in-out;
-    -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  }
-
-  &:after {
-    content: "";
-    display: block;
-    border-bottom: $burger--thickness solid currentColor;
-    width: 100%;
-    margin-bottom: 5px;
-    transition: transform 0.5s ease-in-out;
-    -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  }
-}
-
-.burger-check {
-  display: none;
-}
-
-.burger-check:checked ~ .burger {
-  border-bottom: $burger--thickness solid transparent;
-  transition: border-bottom 0.8s ease-in-out;
-  -webkit-transition: border-bottom 0.8s ease-in-out;
-
-  &:before {
-    transform: rotate(-405deg) translateY(1px) translateX(-3px);
-    -webkit-transform: rotate(-405deg) translateY(1px) translateX(-3px);
-    transition: transform 0.5s ease-in-out;
-    -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  }
-
-  &:after {
-    transform: rotate(405deg) translateY(-4px) translateX(-5px);
-    -webkit-transform: rotate(405deg) translateY(-4px) translateX(-5px);
-    transition: transform 0.5s ease-in-out;
-    -webkit-transition: -webkit-transform 0.5s ease-in-out;
-  }
-}
-
 .dl-menuwrapper button {
   position: absolute;
+  height: 46px;
+  background: none;
+  cursor: pointer;
+  &.dl-active{
+    background: none;
+  }
 }
 
 
@@ -86,6 +23,84 @@ $burger--thickness: 4px;
     position: relative;
     z-index: 100;
   }
+}
+
+.dl-menuwrapper li > a:after,
+.dl-menuwrapper li.dl-back:after{
+  color: $pink1;
+}
+
+.mobileMenuItem,
+.mobileSubMenuItem{
+  border-bottom: 1px solid $white;
+  background: $pink3;
+  &:last-child{
+    border-bottom: none;
+  }
+}
+
+.dl-back{
+  background: $pink2;
+}
+
+.dl-menuwrapper button:hover{
+  background: none;
+}
+
+.burger {
+  width: 33px;
+  cursor: pointer;
+  &:hover{
+    .burger-brick {
+      background: darken($green2, 10%);
+    }
+  }
+}
+
+
+.dl-active{
+  .burger{
+    margin-top: -14px;
+  }
+}
+.burger-brick {
+  height: 4px;
+  background: $green2;
+  margin-top: 6px;
+  -webkit-transition: 0.8s ease-out;
+  -moz-transition: 0.8s ease-out;
+  -ms-transition: 0.8s ease-out;
+  -o-transition: 0.8s ease-out;
+  transition: 0.8s ease-out;
+  &:first-child{
+    margin-top: 0;
+  }
+}
+
+.dl-active .burger-brick:first-child {
+  -webkit-transform: rotate(405deg);
+  -moz-transform: rotate(405deg);
+  -ms-transform: rotate(405deg);
+  -o-transform: rotate(405deg);
+  transform: rotate(405deg);
+  margin-top: 14px;
+}
+
+.dl-active .burger-brick:last-child {
+  -webkit-transform: rotate(-405deg);
+  -moz-transform: rotate(-405deg);
+  -ms-transform: rotate(-405deg);
+  -o-transform: rotate(-405deg);
+  transform: rotate(-405deg);
+  margin-top: -14px;
+}
+
+.dl-active .middle {
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0);
 }
 
 
