--- a/pastelka/scss/_global.scss
+++ b/pastelka/scss/_global.scss
@@ -27,3 +27,22 @@ img{
 }
 
 
+.cartBtn{
+  border: 2px solid $green2;
+  color: $green2;
+  font-size: em(18px, 16px);
+  display: inline-block;
+  background: $white;
+  position: absolute;
+  bottom: em(5px, 16px);
+  right: em(5px, 16px);
+  padding: em(5px, 18px) em(10px, 18px);
+  &:hover{
+    border: 2px solid $green1;
+    color: $white;
+    background: $green1;
+    @include transition-duration(1s)
+  }
+}
+
+
