--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -198,6 +198,7 @@
   @extend %btnFull;
   padding: em(10px, 16px) em(20px, 16px);
   font-size: em(18px, 16px);
+  border: none;
 }
 
 .middleContentRightTop{
