--- a/pastelka/scss/main.scss
+++ b/pastelka/scss/main.scss
@@ -6,6 +6,7 @@
 @import "mixins";
 @import "fonts";
 @import "global";
+@import "modal";
 @import "header";
 @import "bannersAndSlider";
 @import "specialOffers";
